@@ -39,6 +39,7 @@ version ? (????-??-??):
   - added continuous numbering plan (alec)
   - lmsd: fixed gcc-4 signedness warnings (alec)
   - added reduction/enhancement summary on credit notes (alec)
+  - in customernodesbox added link to node's network (alec)
 
 version 1.9.0 Tilgath (2005-12-07):
 
